--- a/_data/leadership.yml
+++ b/_data/leadership.yml
@@ -21,6 +21,11 @@ judges:
     type:
       portrait: jpg
       sprite: png
+  - name: Oscar
+    years: 2022 - Present
+    type:
+      portrait: jpg
+      sprite: png
 judges_past:
   - name: Vincent
     years: 2018 - 2019
